
[gd_scene load_steps=22 format=3 uid="uid://upf1o1mk1k47"]


[ext_resource type="PackedScene" uid="uid://d3qfhx3iw68qy" path="res://character.tscn" id="1_4ifcc"]
[ext_resource type="Script" path="res://HealthBar.gd" id="1_d7am8"]
[ext_resource type="Script" path="res://Main Menu.gd" id="1_hj8el"]
[ext_resource type="Script" path="res://main.gd" id="1_vyvbx"]
[ext_resource type="Script" path="res://GunPanel.gd" id="2_ooi7e"]
[ext_resource type="PackedScene" uid="uid://d337rcjme8qh3" path="res://enemygun.tscn" id="4_30cvs"]
[ext_resource type="PackedScene" uid="uid://rbxbstf2x601" path="res://health_pickup.tscn" id="6_rvstv"]
[ext_resource type="PackedScene" uid="uid://bjxxmlpi65jkc" path="res://enemy_melee.tscn" id="7_k4qu7"]
[ext_resource type="PackedScene" uid="uid://cpitw0nvoq428" path="res://spawners/melee_spawn.tscn" id="7_ym552"]
[ext_resource type="PackedScene" uid="uid://3klv4vsy1ers" path="res://spawners/turret_spawn.tscn" id="8_560xd"]
[ext_resource type="PackedScene" uid="uid://ba5nyxhqkyhrg" path="res://rifle_ammo_pickup.tscn" id="9_hehu8"]
[ext_resource type="PackedScene" uid="uid://cqxjskl0uvtha" path="res://spawners/health_spawn.tscn" id="9_qppl8"]
[ext_resource type="AudioStream" uid="uid://cfr174oaswen6" path="res://SoundAffects/green-sky-125179.mp3" id="10_qoby8"]
[ext_resource type="PackedScene" uid="uid://nvqlswmfqw1o" path="res://shotgun_ammo_pickup.tscn" id="10_vnc52"]

[ext_resource type="PackedScene" uid="uid://bnjdafdqgcqrr" path="res://spawners/rifle_spawn.tscn" id="10_ykfm8"]
[ext_resource type="PackedScene" uid="uid://vuuxeah860w0" path="res://spawners/shotgun_spawn.tscn" id="11_7sdw2"]
[ext_resource type="Script" path="res://DungeonGenerator.gd" id="12_r5ar0"]
[ext_resource type="PackedScene" uid="uid://dnpyym87t3qd1" path="res://tiles/floor.tscn" id="13_8lx0m"]
[ext_resource type="PackedScene" uid="uid://c43m6g3mes7ud" path="res://tiles/simplewall.tscn" id="14_r1a2v"]
[ext_resource type="PackedScene" uid="uid://cgv6dpff6w01m" path="res://tiles/cornerwall.tscn" id="15_tlvrx"]
[ext_resource type="PackedScene" uid="uid://bn7d1tkiehxab" path="res://tiles/inversewall.tscn" id="16_vossf"]

[sub_resource type="Environment" id="Environment_3hy4n"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0, 0.0862745, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi5ed"]
bg_color = Color(0.545098, 0.156863, 0.156863, 0.87451)

[sub_resource type="Theme" id="Theme_quh8o"]
default_font_size = 100

[sub_resource type="Theme" id="Theme_ywmcm"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_q1civ"]
default_font_size = 60

[sub_resource type="Theme" id="Theme_ubx2g"]
default_font_size = 30

[node name="Main" type="Node3D"]
script = ExtResource("1_vyvbx")
turret_scene = ExtResource("4_30cvs")
melee_scene = ExtResource("7_k4qu7")
health_scene = ExtResource("6_rvstv")
rifle_scene = ExtResource("9_hehu8")
shotgun_scene = ExtResource("10_vnc52")
goal_scene = ExtResource("13_ssnc4")

[node name="Spawns" type="Node3D" parent="."]

[node name="PlayerSpawn" type="Marker3D" parent="Spawns" groups=["PlayerSpawn"]]

transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 1, 22)

[node name="HealthSpawn" type="Marker3D" parent="Spawns" groups=["HealthSpawn"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, -3)

[node name="RifleSpawn" type="Marker3D" parent="Spawns" groups=["RifleSpawn"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1, 2)

[node name="ShotgunSpawn" type="Marker3D" parent="Spawns" groups=["ShotgunSpawn"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 5)

[node name="VictorySpawn" type="Marker3D" parent="Spawns" groups=["VictorySpawn"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 5)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.512921, 0)
collision_layer = 4
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_xqenq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_wpool")

[node name="Wall" type="StaticBody3D" parent="."]
transform = Transform3D(-0.3168, 0, 0, 0, 9.936, 0, 0, 0, -0.03, -2, 4.48708, -8)
collision_layer = 4
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
mesh = SubResource("BoxMesh_xqenq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
shape = SubResource("BoxShape3D_wpool")


[node name="Character" parent="." instance=ExtResource("1_4ifcc")]
SPEED = 10.0

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Character"]
transform = Transform3D(-1, -5.63076e-08, -6.68745e-08, 0, 0.764955, -0.644084, 8.74228e-08, -0.644084, -0.764955, 0, 0, 0)
remote_path = NodePath("../../CameraPivot")
update_rotation = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, -2.53872e-10, 0.258819, -0.25, 0.258819, 0.933013, -0.0669873, -0.965926, 0.25, 0.931845, 10.4871, 0)
shadow_enabled = true

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(-1, -1.079e-07, -7.69584e-08, 1.1219e-08, 0.509672, -0.860369, 1.32057e-07, -0.860369, -0.509672, 0, 1.04831, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 1.42109e-14, -8.74228e-08, 1.42109e-14, 1, 0, 8.74228e-08, 0, -1, -1.41924e-07, 3.09944e-06, -9.52669)
environment = SubResource("Environment_3hy4n")
current = true
size = 15.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qoby8")
autoplay = true

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 262.0
offset_bottom = 37.0
theme_override_styles/fill = SubResource("StyleBoxFlat_fi5ed")
fill_mode = 1
script = ExtResource("1_d7am8")

[node name="GunPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 13.0
offset_top = 48.0
offset_right = 261.0
offset_bottom = 139.0
script = ExtResource("2_ooi7e")

[node name="Selections" type="HBoxContainer" parent="UI/GunPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
offset_left = 8.0
offset_top = 5.0
offset_right = 242.0
offset_bottom = 85.0
alignment = 1

[node name="PistolSelect" type="ColorRect" parent="UI/GunPanel/Selections"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
color = Color(0.545098, 0.156863, 0.156863, 0)

[node name="RifleSelect" type="ColorRect" parent="UI/GunPanel/Selections"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
color = Color(0.545098, 0.156863, 0.156863, 1)

[node name="ShotgunSelect" type="ColorRect" parent="UI/GunPanel/Selections"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
color = Color(0.545098, 0.156863, 0.156863, 1)

[node name="Info" type="HBoxContainer" parent="UI/GunPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
offset_left = 8.0
offset_top = 4.0
offset_right = 241.0
offset_bottom = 84.0
alignment = 1

[node name="Pistol" type="VBoxContainer" parent="UI/GunPanel/Info"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="UI/GunPanel/Info/Pistol"]
layout_mode = 2
text = "Pistol"
horizontal_alignment = 1

[node name="PistolAmmo" type="Label" parent="UI/GunPanel/Info/Pistol"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="Rifle" type="VBoxContainer" parent="UI/GunPanel/Info"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="UI/GunPanel/Info/Rifle"]
layout_mode = 2
text = "Rifle"
horizontal_alignment = 1

[node name="RifleAmmo" type="Label" parent="UI/GunPanel/Info/Rifle"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="Shotgun" type="VBoxContainer" parent="UI/GunPanel/Info"]
custom_minimum_size = Vector2(75, 80)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/GunPanel/Info/Shotgun"]
layout_mode = 2
text = "Shotgun"
horizontal_alignment = 1

[node name="ShotgunAmmo" type="Label" parent="UI/GunPanel/Info/Shotgun"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="StartCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17, -17)
current = true

[node name="Main Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hj8el")

[node name="Label" type="Label" parent="Main Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 168.0
offset_right = 136.0
offset_bottom = 240.0
grow_horizontal = 2
theme = SubResource("Theme_quh8o")
text = "Robo Game"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Main Menu"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ywmcm")
text = "Start Game"
icon_alignment = 1

[node name="InstructionsButton" type="Button" parent="Main Menu"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 52.0
offset_right = 100.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ywmcm")
text = "Instructions"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Main Menu"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 132.0
offset_right = 100.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ywmcm")
text = "Quit
"
icon_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 412.5
offset_top = 281.0
offset_right = 452.5
offset_bottom = 321.0

[node name="GameOverScreen" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 307.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q1civ")
text = "Game Over"

[node name="Victory" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 412.5
offset_top = 281.0
offset_right = 452.5
offset_bottom = 321.0

[node name="VictoryScreen" type="Label" parent="Victory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 307.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q1civ")
text = "You Won!"

[node name="Instructions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="Instructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -220.0
offset_right = 375.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ubx2g")
text = "Get to the end of the level
Shoot enemies with Mouse Click before they kill you

Press Tab to cycle between weapons:
Pistol has infinte ammo
Rifle can shot while holding down the mouse
Shotgun shoots many bullets"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Instructions"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ywmcm")
text = "Back"

[node name="Level" type="Node3D" parent="."]
script = ExtResource("12_r5ar0")
floor = ExtResource("13_8lx0m")
s_wall = ExtResource("14_r1a2v")
i_wall = ExtResource("15_tlvrx")
o_wall = ExtResource("16_vossf")
tileSize = 4
meleeSpawn = ExtResource("7_ym552")
turretSpawn = ExtResource("8_560xd")
healthSpawn = ExtResource("9_qppl8")
rifleSpawn = ExtResource("10_ykfm8")
shotgunSpawn = ExtResource("11_7sdw2")
goalSpawn = ExtResource("8_560xd")

[connection signal="changeAmmo" from="Character" to="UI/GunPanel" method="_on_character_change_ammo"]
[connection signal="changeWeapon" from="Character" to="UI/GunPanel" method="_on_character_change_weapon"]
[connection signal="damaged" from="Character" to="UI/HealthBar" method="_on_character_damaged"]
[connection signal="died" from="Character" to="." method="_on_character_died"]
[connection signal="healed" from="Character" to="UI/HealthBar" method="_on_character_healed"]
[connection signal="start_game" from="Main Menu" to="." method="_on_main_menu_start_game"]
[connection signal="pressed" from="Main Menu/StartButton" to="Main Menu" method="_on_start_button_pressed"]
[connection signal="pressed" from="Main Menu/InstructionsButton" to="Main Menu" method="_on_instructions_button_pressed"]
[connection signal="pressed" from="Main Menu/QuitButton" to="Main Menu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Instructions/Button" to="Main Menu" method="_on_button_pressed"]
